# cellmap-models

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: black.yaml  docs.yaml  mypy.yaml  python-publish.yml  static.yml  tests.yaml
docs/: cellpose.html  cosem.html  index.html
examples/export_marwan_dacapo_models/: to_be_exported copy.py  to_be_exported.py
examples/export_models/: export_dacapo.py  export_fly_models.py  push_to_huggingface.py
examples/export_saalfeld_fly_models/: to_be_exported_fly.py
examples/export_saalfeld_fly_models/scripts/: model_spec.py  model_spec_run07.py  model_spec_run07_7hk.py
src/cellmap-models/: utils.py
src/cellmap-models/pytorch/cosem/setup26.1/: model.py
src/cellmap-models/pytorch/cosem/setup45/: model.py
src/cellmap.models.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/cellmap.models/pytorch/cosem/: README.md
src/cellmap.models/pytorch/cosem/setup04/: model.py
src/cellmap.models/pytorch/cosem/setup28/: model.py
src/cellmap.models/pytorch/cosem/setup36/: model.py
src/cellmap_models/: __init__.py  utils.py
src/cellmap_models.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cellmap_models/model_export/: README.md  __init__.py  cellmap_model.py  cellmap_model_v1.py  config.py  dacapo_model.py  export_model.py  generate_metadata.py
src/cellmap_models/pytorch/: __init__.py
src/cellmap_models/pytorch/cellpose/: README.md  __init__.py  add_model.py  download_checkpoint.py  get_model.py  load_model.py
src/cellmap_models/pytorch/cosem/: README.md  __init__.py  load_checkpoint.py  load_model.py
src/cellmap_models/pytorch/cosem/setup04/: model.py
src/cellmap_models/pytorch/cosem/setup26.1/: model.py
src/cellmap_models/pytorch/cosem/setup26_1/: model.py
src/cellmap_models/pytorch/cosem/setup28/: model.py
src/cellmap_models/pytorch/cosem/setup36/: model.py
src/cellmap_models/pytorch/cosem/setup45/: model.py
src/cellmap_models/pytorch/untrained_models/: README.md  __init__.py  resnet.py  unet_2D.py  unet_3D.py  vitnet.py
tests/: test_cosem.py
